--- a/gluon/gluon-status-page/files/lib/gluon/status-page/www/index.html
+++ b/gluon/gluon-status-page/files/lib/gluon/status-page/www/index.html
@@ -1,12 +1,11 @@
+<!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; URL=/cgi-bin/status">
-    <meta http-equiv="cache-control" content="no-cache">
-    <meta http-equiv="expires" content="0">
-    <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT">
-    <meta http-equiv="pragma" content="no-cache">
+    <meta name="viewport" content="width=device-width, user-scalable=no">
+    <link href="html5-doctor-reset-stylesheet.css" rel="stylesheet" type="text/css">
+    <link href="style.css" rel="stylesheet" type="text/css">
+    <script data-main="js/main" src="js/require.js"></script>
   </head>
   <body>
-    <a href="/cgi-bin/status">Redirecting...</a>
   </body>
 </html>
