--- a/gluon/gluon-status-page/files/lib/gluon/status-page/www/index.html
+++ b/gluon/gluon-status-page/files/lib/gluon/status-page/www/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <link href="html5-doctor-reset-stylesheet.css" rel="stylesheet" type="text/css">
     <link href="style.css" rel="stylesheet" type="text/css">
